test/classes/generic/varOverBadGeneric.good
varOverBadGeneric.chpl:12: error: Variables can't be declared using not-fully-instantiated generic types like 'C'
